add auto send waypoint

--- a/sw/ground_segment/python/mark_tracker/ui/mainwindow.ui
+++ b/sw/ground_segment/python/mark_tracker/ui/mainwindow.ui
@@ -61,6 +61,19 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QCheckBox" name="auto_send_check">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>auto send</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
