--- a/sw/ground_segment/python/mark_tracker/ui/mainwindow.ui
+++ b/sw/ground_segment/python/mark_tracker/ui/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>447</width>
-    <height>877</height>
+    <height>920</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -29,7 +29,7 @@
       <x>0</x>
       <y>0</y>
       <width>446</width>
-      <height>851</height>
+      <height>891</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -1052,6 +1052,40 @@
        </item>
       </layout>
      </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QLabel" name="label_10">
+         <property name="text">
+          <string>Orange dist threshold</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="threshold_label">
+         <property name="text">
+          <string>5</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSlider" name="orange_threshold">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>15</number>
+         </property>
+         <property name="value">
+          <number>5</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
     </layout>
    </widget>
   </widget>
@@ -1059,5 +1093,22 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>orange_threshold</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>threshold_label</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>325</x>
+     <y>840</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>145</x>
+     <y>841</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
